adjust css to eliminate div overflow issue

--- a/client/web/src/Styles/DeliveryOption.css
+++ b/client/web/src/Styles/DeliveryOption.css
@@ -1,16 +1,12 @@
 .row-selection{
     display: flex;
     align-items: center;
-    width: 120%;
+    width:100%;
 }
 
 .radio{
     padding-right: 100px;
 }
-
-.price{}
-
-.time{}
 
 .radio_button{
     padding-left: 40px;
